Added caching ... WOOOW

--- a/12/AoC_12.ipynb
+++ b/12/AoC_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "0f353749",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "Result: 525152\n"
+      "Result: 6555315065024\n"
      ]
     }
    ],
    "source": [
     "# Puzzle 2\n",
+    "from functools import cache\n",
+    "\n",
     "def get_data(filename):\n",
     "    l_springs = []\n",
     "    with open(filename, \"r\") as file:\n",
@@ -60,7 +56,9 @@
     "        return False\n",
     "    return True\n",
     "\n",
+    "@cache\n",
     "def slice_txt(txt, l_int):\n",
+    "    l_int = list(l_int)\n",
     "    # check if pattern matches are possible\n",
     "    if len(txt) < sum(l_int) + len(l_int) - 1:\n",
     "        return 0\n",
@@ -75,28 +73,23 @@
     "        new_start = l_int[0] + 1\n",
     "        new_txt = txt[new_start:]\n",
     "        new_l_int = l_int[1:]\n",
-    "        total += slice_txt(new_txt, new_l_int)\n",
+    "        total += slice_txt(new_txt, tuple(new_l_int))\n",
     "    # In any case, check if the complete patterns match the txt without the first char, if the \n",
     "    # first character is either . or ?\n",
     "    if txt[0] in (\".\",\"?\"):\n",
-    "        total += slice_txt(txt[1:], l_int)\n",
+    "        total += slice_txt(txt[1:], tuple(l_int))\n",
     "    return total\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
+    "   \n",
     "    \n",
     "# Main Program, Part 2\n",
-    "l_springs = get_data(\"Test.txt\")\n",
+    "l_springs = get_data(\"Puzzle.txt\")\n",
     "#print_l_springs()\n",
     "\n",
-    "counter = 1\n",
+    "\n",
     "total = 0\n",
     "for x in l_springs:\n",
     "    txt, l_int = x\n",
-    "    total += slice_txt(txt, l_int)\n",
-    "    print(counter)\n",
-    "    counter += 1\n",
+    "    total += slice_txt(txt, tuple(l_int))\n",
     "    \n",
     "print(\"Result:\", total)\n",
     "    "
@@ -106,60 +99,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "743eb9f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = \"?????.?#??????????.?#??????????.?#??????????.?#??????????.?#????\"\n",
-    "l_int = [1,2,1,1,1,2,1,1,1,2,1,1,1,2,1,1,1,2,1,1]\n",
-    "\n",
-    "def is_start_txt(txt, num):\n",
-    "    if num > len(txt):\n",
-    "        #print(\"Too less chars left\")\n",
-    "        return False\n",
-    "    # Check, if first num chars are either # or ?\n",
-    "    for i in range(num):\n",
-    "        if not(txt[i] in [\"#\", \"?\"]):\n",
-    "            return False\n",
-    "    # The pattern did fit. Check if the pattern has been the last part of txt\n",
-    "    if (num == len(txt)):\n",
-    "        return True\n",
-    "    # Check, if first char after num is either . or ?\n",
-    "    if not(txt[num] in [\".\", \"?\"]):\n",
-    "        return False\n",
-    "    return True\n",
-    "\n",
-    "def slice_txt(txt, l_int):\n",
-    "    # check if pattern matches are possible\n",
-    "    if len(txt) < sum(l_int) + len(l_int) - 1:\n",
-    "        return 0\n",
-    "    if l_int == [] and \"#\" in txt:\n",
-    "        return 0\n",
-    "    if l_int == [] and not(\"#\" in txt):\n",
-    "        #print(\"Bingo\")\n",
-    "        return 1\n",
-    "    total = 0\n",
-    "    #print(txt, l_int)\n",
-    "    if is_start_txt(txt, l_int[0]):\n",
-    "        # Pattern matches at the beginning, check if the rest of the patterns match\n",
-    "        new_start = l_int[0] + 1\n",
-    "        new_txt = txt[new_start:]\n",
-    "        new_l_int = l_int[1:]\n",
-    "        total += slice_txt(new_txt, new_l_int)\n",
-    "    # In any case, check if the complete patterns match the txt without the first char, if the\n",
-    "    # first character is either . or ?\n",
-    "    if txt[0] in (\".\",\"?\"):\n",
-    "        total += slice_txt(txt[1:], l_int)\n",
-    "    return total\n",
-    "\n",
-    "total = slice_txt(x, l_int)\n",
-    "print(total)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61f1e005",
    "metadata": {},
    "outputs": [],
    "source": []
