--- a/13/AoC_13.ipynb
+++ b/13/AoC_13.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "# Puzzle 1\n",
+    "# Puzzle 1 & 2\n",
     "def get_data(filename):\n",
     "    l_pat = []\n",
     "    with open(filename, \"r\") as file:\n",
@@ -101,22 +101,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f7022282",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8db4692f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d36d0395",
    "metadata": {},
    "outputs": [],
    "source": []
